replace List of with asList